<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="text_input_label_email">Email</string>
    <string name="text_input_label_password">Password</string>
    <string name="button_login">log in</string>
    <string name="button_register">register</string>
    <string name="text_input_label_name">Name</string>
    <string name="text_input_label_repeat_password">Repeat password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pratos_principais">Pratos Principais</string>
</resources>